--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
         //const LEANCLOUD_SERVER_URL = 'https://YOUR_SERVER_URL.lc-cn-n1-shared.com';
 
         AV.init({
-            appId: LEANCLOUD_APP_ID,
-            appKey: LEANCLOUD_APP_KEY,
-            //serverURL: LEANCLOUD_SERVER_URL
+            appId: '63f8haa3tIFFuiTc2HeDuEyU-gzGzoHsz',
+            appKey: 'SXeVLTnReJKeptXMnlR98Z8J',
+            serverURL: 'https://63f8haa3.lc-cn-n1-shared.com'
         });
 
         let currentUser = null, currentRole = null, currentFamily = null;
