--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@
 
         // 初始化LeanCloud
         AV.init({
-            appId: LEANCLOUD_APP_ID,
-            appKey: LEANCLOUD_APP_KEY,
-            serverURL: LEANCLOUD_SERVER_URL
+            appId: '63f8haa3tIFFuiTc2HeDuEyU-gzGzoHsz',
+            appKey: 'SXeVLTnReJKeptXMnlR98Z8J',
+            serverURL: 'https://63f8haa3.lc-cn-n1-shared.com'
         });
 
         // ========== 全局变量 ==========
