--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>家庭任务助手</title>
     
     <!-- PWA Manifest Link -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" type="application/manifest+json">
 
     
     <style>
